1) Modified theme on substock pages and reformatted navbar 2) Fixed flex of footer for different screen display sizes 3) Added multibutton for stock chart 4) Aligned all contents in stock subpage under styled component

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,8 @@
     font-family: 'Goldman',
     sans-serif;
 }
+
+#page-container {
+    position: relative;
+    min-height:100vh;
+}
